feat: Switch from vanilla js to React